<resources>
    <string name="app_name">Capital Quiz</string>
    <string name="correct">:</string>
    <string name="total">:</string>
    <string name="separator">\u002F</string>
    <string name="first_line">Your current rate is</string>
    <string name="answer1">City 1</string>
    <string name="answer2">City 2</string>
    <string name="answer3">City 3</string>
    <string name="country">Country: Country</string>
    <string name="reset">Reset</string>
</resources>
